# Real-AI-R

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.agents/skills/testing-dashboard/: SKILL.md
.agents/skills/testing-streamlit-app/: SKILL.md
.agents/skills/testing-streamlit-dashboard/: SKILL.md
.streamlit/: config.toml
data/: README.md  panel_3y.parquet  panel_test.parquet  panel_train.parquet  panel_val.parquet  report_365d.md  report_365d_v11.md  report_365d_v12.md  report_3y_v12.md  report_3y_v8_v11.md  report_ablation_v12.md  results_365d.json  results_365d_v11.json  results_365d_v12.json  results_3y_v12.json  results_3y_v8_v11.json  results_ablation_v12.json
docs/: QUICKSTART.md
reports/: daily_report_20260416.txt
scripts/: _strategy_runners.py  ablation_v12.py  backtest_all_365d.py  collect_5y_panels.py  daily_report.py  gen_synthetic_panel.py  wf_backtest.py
src/real_ai_r/: __init__.py
src/real_ai_r/analysis/: charts.py  performance.py
src/real_ai_r/catalyst/: __init__.py
src/real_ai_r/checklist/: __init__.py
streamlit_app/: _cache.py  app.py  pages_catalyst.py  pages_macro.py  pages_ml.py  pages_sector.py
tests/: test_engine.py  test_indicators.py  test_macro.py  test_ml.py  test_sector.py  test_strategies.py
tests/v9/: __init__.py  conftest.py  test_backtest.py  test_engine.py  test_factors.py  test_graph_propagation.py  test_hedge_ensemble.py  test_ic_weighter.py  test_meta_ensemble_v92.py  test_portfolio_qp.py  test_regime_hmm.py  test_state.py  test_v10_zeping_chain.py  test_v9_3_warmstart.py
(+59 files in other folders)
